# spotfire-python

./: .gitattributes  .gitignore  .gitmodules  .whitesource  .whitesource.config  CPPLINT.cfg  LICENSE  MANIFEST.in  README.md  pylintrc  pyproject.toml  requirements_dev.txt  requirements_lint.txt  run-tests.sh  setup.cfg  setup.py  test_requirements_default.txt
.github/: dependabot.yml  python-versions.json
.github/scripts/: download_build.py  parse_pyproject_toml.py  patch_sbom.py  requirements_upload.txt  run_pylint_check.py  upload.py
.github/workflows/: build.yaml  pylint.yaml  release.yaml  sbom.yaml
spotfire/: __init__.py  _utils.py  cabfile.py  cabfile.pyi  cabfile.pyx  cabfile_helpers.c  cabfile_helpers.h  cabfile_helpers.pxi  cabfile_windows.pyx  codesign.py  codesign.pyi  codesign.pyx  codesign_windows.pyx  data_function.py  public.py  requirements.txt  sbdf.py  sbdf.pyi  sbdf.pyx  sbdf_helpers.c  sbdf_helpers.h  sbdf_helpers.pxi  sbdf_orig.py  spk.py  support.py  version.py
spotfire/fast_sbdf/: __init__.py  array.py  base.py  metadata.py
spotfire/sbdf/: __init__.py  array.py  base.py  metadata.py
spotfire/test/: __main__.py  test_cabfile.py  test_data_function.py  test_sbdf.py  utils.py
spotfire/test/files/: template.html.in
spotfire/test/files/cabfile/: qbf-quick.cab  qbf-subdir.cab  qbf.cab
spotfire/test/files/data_function/: debug_log.txt  debug_log_omit_1.txt  debug_log_omit_2.txt  debug_log_truncate.txt  exception-3.13.txt  exception.txt  exception_pysrv78-3.13.txt  exception_pysrv78.txt  indentation_error-3.11.txt  indentation_error-3.13.txt  indentation_error.txt  missing_input.txt  nested_exception-3.13.txt  nested_exception.txt  no_outputs.txt  output_not_defined-3.13.txt  output_not_defined.txt  print.txt  script_filename-3.13.txt  script_filename.txt  stderr_pysrv116.txt  stderr_pysrv116_2-3.13.txt  stderr_pysrv116_2.txt  stderr_pysrv116_d.txt  stderr_pysrv116_e.txt  syntax_error-3.11.txt  syntax_error-3.13.txt  syntax_error-3.8.txt  syntax_error.txt  syntax_error_b-3.10.txt  syntax_error_b-3.11.txt  syntax_error_b-3.13.txt  syntax_error_b.txt  syntax_error_c-3.11.txt  syntax_error_c-3.13.txt  syntax_error_c.txt  table_metadata.txt  warning_pysrv79.txt
spotfire/test/files/sbdf/: 0.sbdf  1.sbdf  100.sbdf  10001-compressed-written.sbdf  10001-compressed.sbdf  10001.sbdf  1_bad_header_magic.sbdf  1_incomplete.sbdf  1_majorversion_123.sbdf  1_majorversion_1_minor_237.sbdf  1_strange_header_type_0xCC.sbdf  2x4_cs.sbdf  3x3_cs.sbdf  CountriesAndFlags.sbdf  NACountries.sbdf  Readme.txt  alltypes.sbdf  alltypes.stdf  currency_decimal.sbdf  datetime.sbdf  datetime2.sbdf  df_with_rownames.sbdf  mininteger.sbdf  no_columns.sbdf  no_columns_one_slice.sbdf  rownamescol.sbdf  unicode.sbdf
